---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 42
expression: "type s : set of boolean\nvar k : s\nk := k()\n"

---
"<anonymous>"@(FileId(1), 9..23) [Declared]: <error>
"s"@(FileId(1), 5..6) [Resolved(Type)]: set[DefId(LibraryId(0), LocalDefId(1))] of boolean
"k"@(FileId(1), 28..29) [Declared]: set[DefId(LibraryId(0), LocalDefId(1))] of boolean
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 39..40: cannot call or subscript `k`
| note in file FileId(1) for 39..40: this is of type `set s (of boolean)`
| error in file FileId(1) for 39..40: `set s (of boolean)` is not callable
| info: sets can only be constructed from their type names
